@@ -434,14 +434,20 @@ grub_normal_init_page (struct grub_term_output *term)
   grub_free (unicode_msg);
 }
 
-static char *
-read_lists (struct grub_env_var *var __attribute__ ((unused)),
-	    const char *val)
+static void
+read_lists (const char *val)
 {
-  read_command_list ();
-  read_fs_list ();
-  read_crypto_list ();
-  read_terminal_list ();
+  read_command_list (val);
+  read_fs_list (val);
+  read_crypto_list (val);
+  read_terminal_list (val);
+}
+
+static char *
+read_lists_hook (struct grub_env_var *var __attribute__ ((unused)),
+		 const char *val)
+{
+  read_lists (val);
   return val ? grub_strdup (val) : NULL;
 }
 
@@ -451,10 +457,11 @@ void
 grub_normal_execute (const char *config, int nested, int batch)
 {
   grub_menu_t menu = 0;
+  const char *prefix = grub_env_get ("prefix");
 
-  read_lists (NULL, NULL);
+  read_lists (prefix);
   read_handler_list ();
-  grub_register_variable_hook ("prefix", NULL, read_lists);
+  grub_register_variable_hook ("prefix", NULL, read_lists_hook);
   grub_command_execute ("parser.grub", 0, 0);
 
   if (config)
